2009-03-08  Hans Breuer  <hans@breuer.org>

	* plug-ins/python/pydia-property.c : implement PyDia_set_Arrow() to
	allow modification of line ends from python scripts, like:
		o.properties["start_arrow"] = (17, .5, .5)

	* app/filedlg.c : drop using GTK_WIN_POS_MOUSE on the file dialogs. 
	Nowadays that almost inevitable would lead to a partial off-screen
	dialog, see e.g. bug #314084 and bug #512580

	* lib/dia_xml_libxml.h lib/dia_xml.[ch] lib/prop_geomtypes.h
	  plug-ins/shape/shape-export.c : removed some cruft from lixml1 
	days while investigating bug #570592
	* config.h.win32 : insignificant changes slightly related bug #570592

	* app/menus.c : don't pass diagram and filename to plug-ins called from
	the toolbox-menu, otherwise the pydia help series could unintentinally
	modify unrelated open diagrams

2009-03-07  Hans Breuer  <hans@breuer.org>

	* app/menus.c(create_or_ref_display_actions) :  only create the action
	group once, not per display, so the right actions are sensitive for the
	"Use menu bar", too. Fixes bug #574472
	
	* app/layer_dialog.[ch] : implement "Add Layer" and "Rename Layer" also
	without the indirection Layer dialog
	* app/menus.c : activate both commands
	* lib/diagramdata.[ch] lib/libdia.def : implement and export
	data_layer_get_index() used for the above

	* data/display-ui.xml data/integrated-ui.xml data/popup-ui.xml
	  app/menus.c : move "Edit/Properties" to "File/Diagram Properties" as
	suggested by bug #573259, also create a Layers submenu to hold formerly
	"Edit/Layers", "Objects/Move (selection) to layer [...]"
	* app/pixmaps/objects-layer-above.png app/pixmaps/layer-add.png
	  app/pixmaps/objects-layer-below.png app/pixmaps/layers.png
	  app/pixmaps/layer-rename.png : stock icons stolen from Inkscape for 
	the new Layers menu
	* app/Makefile.am app/makefile.msc : generate inline icons
	* app/commands.[ch] : new callbacks for layer add/rename (not enabled)

	* app/preferences.c(prefs_set_value_in_widget) : don't choke on 