@@ -1,5 +1,12 @@
 2009-03-08  Hans Breuer  <hans@breuer.org>
 
+	* plug-ins/python/codegen.py : PascalRenderer by Johann Glaser and
+	some adjustments to (Cxx/Py/Java)Renderer to almost get on par
+
+	* lib/filter.c(filter_guess_*_filter) : make the no-guess flag work
+	as intended, i.e. when there is just one filter per extension it's
+	no guess
+
 	* plug-ins/python/pydia-property.c : implement PyDia_set_Arrow() to
 	allow modification of line ends from python scripts, like:
 		o.properties["start_arrow"] = (17, .5, .5)
